--- a/styles.css
+++ b/styles.css
@@ -34,3 +34,11 @@ body {
   display: flex;
   flex-direction: column;
 }
+#reading {
+  width: auto;
+  height: 200px;
+}
+#hiking {
+  width: auto;
+  height: 200px;
+}
